--- a/frontend/ai-travel-planner/package.json
+++ b/frontend/ai-travel-planner/package.json
@@ -10,21 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.20.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.437.0",
+    "firebase": "^10.14.1",
+    "framer-motion": "^11.11.9",
+    "lucide-react": "^0.446.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-native-google-places-autocomplete": "^2.5.6",
-    "react-router-dom": "^6.26.1",
-    "shadcn": "^2.0.1",
+    "react-google-places-autocomplete": "^4.1.0",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/node": "^22.5.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -34,8 +41,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "vite": "^5.4.1"
   }
 }
